# doudizhu

./: CMakeLists.txt  main.cpp
include/: infer.hpp  pai.hpp
src/: infer.cpp  pai.cpp
